<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_purple_dark"
    tools:context=".MainActivity">

        <!-- Fondo de curvas -->
        <ImageView
            android:id="@+id/bgCurves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/fondo"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/imgRunner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            android:src="@drawable/runiniginicio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Inferior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
            android:id="@+id/Inferior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/app_titulo"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/app_subtitulo"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="245dp"
                    android:layout_height="54dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/app_btn_empecemos"
                    android:textColor="@color/black"
                    app:cornerRadius="16dp" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
