<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_purple_dark"
    tools:context=".CarreraTerminadaActivity">


    <!-- Fondo de curvas -->
    <ImageView
        android:id="@+id/bgCurves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/fondo"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="72dp" />

    <ImageButton
        android:id="@+id/btnBack0"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/formContainer0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/formContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgCurves">

        <TextView
            android:id="@+id/txtRaceTitle0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/label_carrera_terminada"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRaceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/label_felicitaciones"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />



    </LinearLayout>



    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/formContainer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formContainer0">

        <TextView
            android:id="@+id/txtLive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/label_titulo_carrera"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/metricsLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txtLive">

            <!-- Izquierda -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00\nKM"
                android:gravity="start|center_vertical"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:paddingHorizontal="8dp"/>

            <!-- Centro -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00\nRITMO"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginHorizontal="24dp"/>

            <!-- Derecha -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00\nDURACIÓN"
                android:gravity="end|center_vertical"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:paddingHorizontal="8dp"/>
        </LinearLayout>






    </LinearLayout>


    <LinearLayout
        android:id="@+id/formContainer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/fabMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formContainer">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="344dp"
            android:layout_height="227dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imgRace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/carrera_image" />
        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="TODO"
        app:backgroundTint="@color/color_pink"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_menu"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent" />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_purple_dark"
        app:itemBackground="@color/color_purple_light"
        app:itemIconTint="@color/bottom_nav_icon_colors"
        app:itemTextColor="@color/bottom_nav_text_colors"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>